syntax = "proto3";

package api.business.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "review-business/api/business/v1;v1";

service Business {
    rpc CreateReply (CreateReplyRequest) returns (CreateReplyReply) {
        option (google.api.http) = {
            post: "/v1/reply",
            body: "*"
        };
    };
}

message CreateReplyRequest {
    string          reviewID = 1;
    string          userID = 2;
    string          content = 3 [(validate.rules).string = {min_len: 1, max_len: 1024}];
    repeated string pictures = 4;
    repeated string videos = 5;
}

message CreateReplyReply {
    string replyID = 1;
}