syntax = "proto3";

package api.review.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "review-service/api/review/v1;v1";

service Review {
	rpc CreateReview (CreateReviewRequest) returns (CreateReviewReply) {
        option (google.api.http) = {
            post: "/v1/review",
            body: "*"
        };
    };
	rpc UpdateReview (UpdateReviewRequest) returns (UpdateReviewReply);
	rpc DeleteReview (DeleteReviewRequest) returns (DeleteReviewReply);
	rpc GetReview (GetReviewRequest) returns (GetReviewReply);
	rpc ListReview (ListReviewRequest) returns (ListReviewReply);
}

message CreateReviewRequest {
    string userID = 1;
    string orderID = 2;
    int32 rating = 3 [(validate.rules).int32 = {in: [1,2,3,4,5]}];
    int32 serviceRating = 4 [(validate.rules).int32 = {in: [1,2,3,4,5]}];
    int32 deliveryRating = 5 [(validate.rules).int32 = {in: [1,2,3,4,5]}];
    string content = 6 [(validate.rules).string = {min_len: 1, max_len: 1024}];
    repeated string pictures = 7;
    repeated string videos = 8;
    bool isAnonymous = 9;
}

message CreateReviewReply {
    string reviewID = 1;
}

message UpdateReviewRequest {}
message UpdateReviewReply {}

message DeleteReviewRequest {}
message DeleteReviewReply {}

message GetReviewRequest {}
message GetReviewReply {}

message ListReviewRequest {}
message ListReviewReply {}